--- a/report.tex
+++ b/report.tex
@@ -3,7 +3,7 @@
 \usepackage{amsfonts}
 \usepackage{color}
 \usepackage{multirow}
-%%\usepackage{rotating}
+%\usepackage{rotating}
 \usepackage{url}
 \usepackage{latexsym}
 \pagenumbering{arabic}
