added intro text

--- a/report.tex
+++ b/report.tex
@@ -30,10 +30,12 @@ Imagine walking into a classroom or party, and having access to a dynamic social
 
 Users access the application through a web interface. When users first log in into the application, they create an account with information they are going to share with other people and information that will be used to recognize other users that are of interest. A user's profile resembles an online business card, only containing information that the user does not mind sharing with other people, since the emphasis is not in sharing personal information but on networking.   To complement the profile information, the users is constantly updating his or her context information. The context information is used by the application to find other users of interest. The context information can range from a fixed list of the user's interests to more transient information like the user's location. The interface of the application interacts with a server to find other users in a location and pulling these users' context. The interface also utilizes Google Maps' interface to display the network of users logged in at a specific location. Through the Google Map interface, the user can see other users' real time location, can see their profile information, and interact with them. While using the application, users will enter and leave the dynamic social network all the time, depending on whether a person is considered to be ''present'' in the network or not. To determine whether a person is considered to be "present", the application will use GPS information from the user's browser.
 
+The rest of this paper is structured as follows. First, we will present our overall system architecture in Section 1, including backend logic, database interaction, and user interfaces. Then, we will outline the implemented use cases in Section 2, followed by a discussion of future extensions in Section 3.
 
 \section{System Architecture}
 
 %%diagram
+Figure ~\ref{fig:arch} shows 
 
 
 \subsection{Database Setup}
