--- a/report.tex
+++ b/report.tex
@@ -24,6 +24,10 @@ University of Maryland, College Park\\
 
 \section{Introduction}
 
+
+
+Technology, especially internet-based technology, has often been protrayed as having an alienating force by further removing us from `real' social interaction in favor of the virtual kind. However, a wave of recent applications has shown that in fact, the opposite can be true. Services such as Foursquare, Hot Potato, and Meetup have shown that we can actually enhance `real' experiences through the use of technology. In this paper, we present our efforts to extend that line of thinking in the form of location-based dynamic social networks. The main objective is to facilitate interaction with new people around you who may potentially match your interests. The secondary objective is to find out if your friends are around and get together. 
+
 {\color{red} 
 Imagine walking into a classroom or party, and having access to a dynamic social network with the other people in your immediate area, including desired profile information and real time information which is dependent on the venue. Motivated by the previous idea, the Proteus group implemented an application that generates dynamic networks that are location dependent for a user to immediately recognize people of interest or for a user to establish contact more easily with other users. Currently the application is a web application that runs on web browsers, which makes it extremely portable. However the application does need device specific information, the GPS location of the device running the application. This is not a problem because as the HTML5 standard becomes more pervasive, this application will be able to be deployed in any cellphone, PDA, iphones, etc. whose browser supports HTML5 geolocation capability.
 
