--- a/report.tex
+++ b/report.tex
@@ -25,19 +25,30 @@ University of Maryland, College Park\\
 \section{Introduction}
 
 
+Technology, especially internet-based technology, has often been protrayed as having an alienating force by further removing us from `real' social interaction in favor of the virtual kind. However, a wave of recent applications has shown that in fact, the opposite can be true. Services such as Foursquare, Hot Potato, and Meetup have shown that we can actually enhance `real' experiences through the use of technology. 
 
-Technology, especially internet-based technology, has often been protrayed as having an alienating force by further removing us from `real' social interaction in favor of the virtual kind. However, a wave of recent applications has shown that in fact, the opposite can be true. Services such as Foursquare, Hot Potato, and Meetup have shown that we can actually enhance `real' experiences through the use of technology. In this paper, we present our efforts to extend that line of thinking in the form of location-based dynamic social networks. The main objective is to facilitate interaction with new people around you who may potentially match your interests. The secondary objective is to find out if your friends are around and get together. 
+In this paper, we present our efforts to extend that line of thinking in the form of location-based dynamic social networks. Imagine walking into a classroom or party, and having access to a dynamic social network with the other people in your immediate area, including desired profile information and real time information which is dependent on the venue. Motivated by the previous idea, the Proteus group implemented an application that generates dynamic networks that are location dependent for a user to immediately recognize people of interest or for a user to establish contact more easily with other users. The main objective is to facilitate interaction with new people around you who may potentially match your interests. The secondary objective is to find out if your friends are around and get together. 
 
-{\color{red} 
-Imagine walking into a classroom or party, and having access to a dynamic social network with the other people in your immediate area, including desired profile information and real time information which is dependent on the venue. Motivated by the previous idea, the Proteus group implemented an application that generates dynamic networks that are location dependent for a user to immediately recognize people of interest or for a user to establish contact more easily with other users. Currently the application is a web application that runs on web browsers, which makes it extremely portable. However the application does need device specific information, the GPS location of the device running the application. This is not a problem because as the HTML5 standard becomes more pervasive, this application will be able to be deployed in any cellphone, PDA, iphones, etc. whose browser supports HTML5 geolocation capability.
+The rest of this paper is structured as follows. First, we will present our overall system architecture in Section 2, including backend logic, database interaction, and user interfaces. Then, we will outline the implemented use cases in Section 3, followed by a discussion of future extensions in Section 4.
 
-
-Users access the application through a web interface. When users first log in into the application, they create an account with information they are going to share with other people and information that will be used to recognize other users that are of interest. A user's profile resembles an online business card, only containing information that the user does not mind sharing with other people, since the emphasis is not in sharing personal information but on networking.   To complement the profile information, the users is constantly updating his or her context information. The context information is used by the application to find other users of interest. The context information can range from a fixed list of the user's interests to more transient information like the user's location. The interface of the application interacts with a server to find other users in a location and pulling these users' context. The interface also utilizes Google Maps' interface to display the network of users logged in at a specific location. Through the Google Map interface, the user can see other users' real time location, can see their profile information, and interact with them. While using the application, users will enter and leave the dynamic social network all the time, depending on whether a person is considered to be ''present'' in the network or not. To determine whether a person is considered to be "present", the application will use GPS information from the user's browser.
-}
-
-The rest of this paper is structured as follows. First, we will present our overall system architecture in Section 1, including backend logic, database interaction, and user interfaces. Then, we will outline the implemented use cases in Section 2, followed by a discussion of future extensions in Section 3.
 
 \section{System Architecture}
+
+\subsection{Overview}
+
+As our application is web-based, it can run on any computer or mobile device which has a web browser, making it extremely portable. Making it light-weight in order not to unduly drain the limited resources of a mobile device was also a design priority, and thus all computation is performed on the servers, and only the necessary map update process runs on the device itself. 
+
+However the application does need device specific information, the GPS location of the device running the application. This is not a problem because as the HTML5 standard becomes more pervasive, this application will be able to be deployed in any cellphone, PDA, iphones, etc. whose browser supports HTML5 geolocation capability.
+
+For the user, all interaction with the application takes place through a web interface. The first interaction users have is creating an account on the system. At this point, the user provides their profile information. This will also be used by the recommendation engine to match other users of interest. A user's profile resembles an online business card, only containing information they are willing to share with other people, since the emphasis is not in sharing personal information, but rather on encouraging real interaction. 
+
+To complement the profile information, the user is constantly updating his or her context information. This includes active updates, where the user himself provides additional status information, like a list of interests, and passive updates, like location, where the users information is updated by the application automatically. The context information, in addition to the profile, is used by the application to find other users of interest. 
+
+The interface of the application interacts with a server to find other users in a location and pulling these users' context. The interface also utilizes Google Maps' interface to display the network of users logged in at a specific location. Through the Google Map interface, the user can see other users' real time location, can see their profile information, and interact with them. While using the application, users will enter and leave the dynamic social network all the time, depending on whether a person is considered to be ''present'' in the network or not. To determine whether a person is considered to be "present", the application will use GPS information from the user's browser.
+
+
+
+
 
 %%diagram
 Figure ~\ref{fig:arch} shows the structure of our system, as currently implemented. 
